--- a/SGCodeExamples.mediawiki
+++ b/SGCodeExamples.mediawiki
@@ -62,7 +62,7 @@ Very occasionally it may be appropriate to use an [[http://wiki.libsdl.org/moin.
 
 ''Action'': In addition to following the other guidelines in this style guide, also follow the general instructions found in the [[http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Includes|Wiki Basics]] style guide to create the Include markup on each page.
 
-''Action'': We are keeping a list of all pages using Includes for future reference.  In order to keep this list up to date, please email <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> with a list of all pages that received the include and what page was used as the source.  We appreciate your taking time for this extra step to help us keep our records accurate and useful.  Thank you!
+''Action'': We are keeping a list of all pages using Includes for future reference.  In order to keep this list up to date, please email <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> with a list of all pages that received the Include and what page was used as the source.  We appreciate your taking time for this extra step to help us keep our records accurate and useful.  Thank you!
 
 [[#ToC|Return to Table of Contents]]
 
