--- a/SDL_GetPerformanceFrequency.mediawiki
+++ b/SDL_GetPerformanceFrequency.mediawiki
@@ -12,7 +12,7 @@ Uint64 SDL_GetPerformanceFrequency(void)
 ```
 
 == Return Value ==
-Returns the count per second ,,on success, or a negative error code on failure; call [[SDL_GetError]]() for more information,,.
+Returns ^a platform-specific^ count per second on success, or ^a default value^ on failure,,; call [[SDL_GetError]]() for more information,,.
 
 == Code Examples ==
 ```c++
