--- a/SDL_GetPerformanceCounter.mediawiki
+++ b/SDL_GetPerformanceCounter.mediawiki
@@ -12,7 +12,7 @@ Uint64 SDL_GetPerformanceCounter(void)
 ```
 
 == Return Value ==
-Returns the counter value on success, ,,or a negative error code on failure; call [[SDL_GetError]]() for more information,,.
+Returns the counter value on success, or ^a default value^ on failure,,; call [[SDL_GetError]]() for more information,,.
 
 == Code Examples ==
 ```c++
@@ -24,6 +24,7 @@ You can add your code example here
 
 == Related Functions ==
 :[[SDL_GetPerformanceFrequency]] ???
+:[[SDL_GetTicks]] ???
 
 ----
 [[CategoryAPI]], [[CategoryTimer]]
