--- a/SDL_GetDisplayBounds.mediawiki
+++ b/SDL_GetDisplayBounds.mediawiki
@@ -17,7 +17,7 @@ int SDL_GetDisplayBounds(int       displayIndex,
 |the index of the display to query
 |-
 |'''rect'''
-|the [[SDL_Rect]] structure to fill with the display bounds
+|the [[SDL_Rect]] structure filled in with the display bounds
 |}
 
 == Return Value ==
