--- a/SDL_GetPerformanceFrequency.mediawiki
+++ b/SDL_GetPerformanceFrequency.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_GetPerformanceFrequency =
 Use this function to get the count per second of the high resolution counter.
@@ -12,7 +11,7 @@ Uint64 SDL_GetPerformanceFrequency(void)
 ```
 
 == Return Value ==
-Returns ^a platform-specific^ count per second on success, or ^a default value^ on failure,,; call [[SDL_GetError]]() for more information,,.
+Returns a platform-specific count per second.
 
 == Code Examples ==
 ```c++
@@ -23,7 +22,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_GetPerformanceCounter]] ???
+:[[SDL_GetPerformanceCounter]]
 
 ----
 [[CategoryAPI]], [[CategoryTimer]]
