--- a/CategoryVideo.mediawiki
+++ b/CategoryVideo.mediawiki
@@ -13,6 +13,8 @@
 
 This category contains functions for handling display and window actions.
 
+''NOTE'': When working with threads you should not expect to be able to create a window, render, or receive events on any thread other than the main one.  For platform-specific exceptions or complicated options ask on the [http://lists.libsdl.org/listinfo.cgi/sdl-libsdl.org mailing list].
+
 == Enumerations ==
 <<FullSearch(category:CategoryEnum CategoryVideo)>>
 
