--- a/CategoryThread.mediawiki
+++ b/CategoryThread.mediawiki
@@ -24,7 +24,7 @@ Always use the _beginthread() and _endthread() of the calling runtime library!
 
 <<Color2(green,There is a lot of info in the header that looks like it might be code examples or coding info but is formatted more like complex defines.  Does any of that belong here?)>>
 
-''NOTE'': You should not expect to be able to create a window, render, or receive events on any thread other than the main one.  For platform-specific exceptions or complicated options ask on the [http://lists.libsdl.org/listinfo.cgi/sdl-libsdl.org mailing list].
+''NOTE'': You should not expect to be able to create a window, render, or receive events on any thread other than the main one.  For platform-specific exceptions or complicated options ask on the [http://lists.libsdl.org/listinfo.cgi/sdl-libsdl.org mailing list] or [http://forums.libsdl.org/viewtopic.php?t=5973 forum].
  
 == Enumerations ==
 <<FullSearch(category:CategoryEnum CategoryThread)>>
