--- a/CategoryAssertions.mediawiki
+++ b/CategoryAssertions.mediawiki
@@ -14,7 +14,7 @@ This category contains functions for managing assertions.
 
 SDL_ASSERT_LEVEL affects which assertions, if any, are processed during compiling based on which function was used to create the assertion (see functions below).  
 
-If not otherwise set, SDL_ASSERT_LEVEL will default to level 2 for debugging ^or compiling with GNUC or MSC_VER^ or level 1 otherwise.  SDL_ASSERT_LEVEL may also be set to 0 or 3.  
+SDL_ASSERT_LEVEL can be defined in your project.  If not otherwise set, SDL_ASSERT_LEVEL will default to level 2 for debug builds or level 1 for release builds.  SDL_ASSERT_LEVEL may also be set to 0 or 3.  
 
 The following table describes each SDL_ASSERT_LEVEL setting and the corresponding impact on the three SDL_assert functions:
 
@@ -27,23 +27,24 @@ The following table describes each SDL_ASSERT_LEVEL setting and the correspondin
 |<:>'''0'''
 |all assertions disabled
 |SDL_assert<br/>SDL_assert_release<br/>SDL_assert_paranoid
-|disabled<br/>disabled<br/>disabled
+|<<Color2(gray,disabled)>><br/><<Color2(gray,disabled)>><br/><<Color2(gray,disabled)>>
 |-
 |<:>'''1'''
 |for release (default)
 |SDL_assert<br/>SDL_assert_release<br/>SDL_assert_paranoid
-|disabled<br/>'''enabled'''<br/>disabled
+|<<Color2(gray,disabled)>><br/>'''enabled'''<br/><<Color2(gray,disabled)>>
 |-
 |<:>'''2'''
 |for debugging (default)
 |SDL_assert<br/>SDL_assert_release<br/>SDL_assert_paranoid
-|'''enabled'''<br/>'''enabled'''<br/>disabled
+|enabled<br/>enabled<br/><<Color2(gray,disabled)>>
 |-
 |<:>'''3'''
 |stringent for detailed checking
 |SDL_assert<br/>SDL_assert_release<br/>SDL_assert_paranoid
 |'''enabled'''<br/>'''enabled'''<br/>'''enabled'''
 |}
+
 
 == Enumerations ==
 
