--- a/SDL_assert_data.mediawiki
+++ b/SDL_assert_data.mediawiki
@@ -4,38 +4,38 @@
 '''DRAFT'''
 
 = SDL_assert_data =
-A structure that contains ^assertion criteria^???.
+A structure that contains assertion information.
 
 
 == Data Fields ==
 {|
 |int
 |'''always_ignore'''
-|description
+|1 if set, 0 otherwise
 |-
 |unsigned int
 |'''trigger_count'''
-|description
+|number of times this assertion was triggered
 |-
 |const char*
 |'''condition'''
-|description
+|the assertion condition to check
 |-
 |const char*
 |'''filename'''
-|description
+|the filename containing the assertion
 |-
 |int
 |'''linenum'''
-|description
+|the location of the assertion in the file
 |-
 |const char*
 |'''function'''
-|description
+|the function containing the assertion
 |-
-|const struct [[SDL_assert_data]]*
-|'''next'''
-|description
+|<style="color: #808080;">const struct [[SDL_assert_data]]*
+|<style="color: #808080;">'''next'''
+|<style="color: #808080;">(internal use)
 |}
 
 == Code Examples ==
@@ -46,9 +46,13 @@ You can add your code example here
 == Remarks ==
 ''You can add useful comments here''
 
+This structure is filled in with information about the assertion and is used by the assertion handler then added to the assertion report.
+
 == Related Functions ==
-:[[SDL_GetAssertionReport]] ???
-:[[SDL_ReportAssertion]] ???
+:[[SDL_assert]]
+:[[SDL_assert_paranoid]]
+:[[SDL_assert_release]]
+:[[SDL_GetAssertionReport]]
 
 ----
 [[CategoryStruct]], [[CategoryAssertions]]
