--- a/SDL_assert_data.mediawiki
+++ b/SDL_assert_data.mediawiki
@@ -1,10 +1,9 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
 <!-- acl All:read -->
-'''DRAFT'''
 
 = SDL_assert_data =
-A structure that contains assertion information.
+A structure that contains information about an assertion.
 
 
 == Data Fields ==
@@ -23,7 +22,7 @@ A structure that contains assertion information.
 |-
 |const char*
 |'''filename'''
-|the filename containing the assertion
+|the file containing the assertion
 |-
 |int
 |'''linenum'''
@@ -44,8 +43,6 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
-
 This structure is filled in with information about the assertion and is used by the assertion handler then added to the assertion report.
 
 == Related Functions ==
