--- a/SDL_assert.mediawiki
+++ b/SDL_assert.mediawiki
@@ -14,7 +14,7 @@ void SDL_assert(condition)
 == Function Parameters ==
 {|
 |'''condition'''
-|the ^expression^ ,,condition,, to check
+|the expression to check
 |}
 
 == Code Examples ==
@@ -23,7 +23,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-This function is enabled and available for use only if the SDL_ASSERT_LEVEL is set to 2 or 3, otherwise it is disabled.  See the [[CategoryAssertions|Assertions]] Category page for details.
+This function is enabled only when the SDL_ASSERT_LEVEL is set to 2 or 3, otherwise it is disabled.  See the [[CategoryAssertions|Assertions]] Category page for details.
 
 == Related Functions ==
 :[[SDL_assert_paranoid]]
