--- a/SDL_assert_paranoid.mediawiki
+++ b/SDL_assert_paranoid.mediawiki
@@ -14,7 +14,7 @@ void SDL_assert_paranoid(condition)
 == Function Parameters ==
 {|
 |'''condition'''
-|the ^expression^ ,,condition,, to check
+|the expression to check
 |}
 
 == Code Examples ==
@@ -23,7 +23,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-This function is disabled by default.  It is available for use only if the SDL_ASSERT_LEVEL is set to 3.  See the [[CategoryAssertions|Assertions]] Category page for details.
+This function is disabled by default.  It is available for use only when the SDL_ASSERT_LEVEL is set to 3.  See the [[CategoryAssertions|Assertions]] Category page for details.
 
 == Related Functions ==
 :[[SDL_assert]]
