update content (in progress)

--- a/SDL_SetAssertionHandler.mediawiki
+++ b/SDL_SetAssertionHandler.mediawiki
@@ -22,9 +22,7 @@ void SDL_SetAssertionHandler(SDL_AssertionHandler handler,
 |}
 
 == Return Value ==
-Returns an [[SDL_assert_state]] value of how to handle the assertion failure.
-
-<<Color2(green,This seems to be the RV for the callback. Since this function has a void RV.  Should it be listed here anyway?)>>
+Returns a value from the callback. ???  or delete this section?
 
 == Code Examples ==
 ```c++
@@ -34,13 +32,17 @@ You can add your code example here
 == Remarks ==
 This ^function^ allows an app to show its own assertion UI and/or force the response to an assertion failure. If the app doesn't provide this, SDL will try to do the right thing, popping up a system-specific GUI dialog, and probably minimizing any fullscreen windows.
 
-'''handler''' calls the following callback function:
+'''handler''' has the following form:
  ```
 SDL_assert_state (SDLCALL *SDL_AssertionHandler)(
                            const SDL_assert_data*, void* userdata)
 ```
+<<Color2(green,Should this be formatted like a regular function?)>>
+: where <code>(SDLCALL *SDL_AssertionHandler)</code> is the name of the callback, <code>data</code> is a pointer to an [[SDL_assert_data]] struct, and <code>userdata</code> takes what is passed in '''userdata'''.
+<<Color2(green,Should the callback info be described here?)>>
+:The callback returns an [[SDL_assert_state]] value of how to handle the assertion failure.
 
-<<Color2(green,Should the callback params be described here? ie: where <code>SDL_assert_data</code> is <something> and <code>userdata</code> is <something>.)>>
+<<Color2(green,This seems to be the RV for the callback. Since this function has a void RV.  Should it be listed here anyway?)>>
 
 This callback may fire from any thread, but it runs wrapped in a mutex, so it will only fire from one thread at a time.
 
