--- a/SDL_SetAssertionHandler.mediawiki
+++ b/SDL_SetAssertionHandler.mediawiki
@@ -29,16 +29,14 @@ You can add your code example here
 == Remarks ==
 This function allows an app to show its own assertion UI and/or force the response to an assertion failure. If the app doesn't provide this, SDL will try to do the right thing, popping up a system-specific GUI dialog, and probably minimizing any fullscreen windows.
 
-'''handler''' has the following form:
+'''handler''' is a callback function of the following form:
  ```
 SDL_assert_state YourAssertionHandler(const SDL_assert_data* data,
                                       void*                  userdata)
 ```
-: where <code>YourAssertionHandler</code> is the name of your callback function, <code>data</code> is a pointer to the [[SDL_assert_data]] struct corresponding to the current assertion, and <code>userdata</code> is what was passed as '''userdata'''.
+: where <code>YourAssertionHandler</code> is the name of your function, <code>data</code> is a pointer to the [[SDL_assert_data]] struct corresponding to the current assertion, and <code>userdata</code> is what was passed as '''userdata''' to [[SDL_SetAssertionHandler]]().
 
-:The callback returns an [[SDL_assert_state]] value of how to handle the assertion failure.
-
-<<Color2(green,This seems to be the RV for the callback. Since this function has a void RV.  Should it be listed here anyway?)>>
+:This callback should return an [[SDL_assert_state]] value of how to handle the assertion failure.
 
 This callback may fire from any thread, but it runs wrapped in a mutex, so it will only fire from one thread at a time.
 
